--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "serverless": "^2.4.0",
+    "serverless-iam-roles-per-function": "^2.0.2",
     "serverless-python-requirements": "^5.1.0"
   }
 }
